--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,41 +1,33 @@
-name: PHP Composer
-
+name: CI
 on:
   push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
-
 jobs:
-  build:
-
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      matrix:
-       
-        include:
-        - operating-system: 'ubuntu-latest'
-          php-versions: '7.2'
+  tests:
+    runs-on: ubuntu-18.4
+    name: Tests
     steps:
-    - uses: actions/checkout@v2
-
-    
-
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php7.2-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php7.2-
-
-    - name: Install dependencies
-      if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer update --prefer-dist --no-progress --no-suggest
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Cache dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.composer/cache/files
+          key: dependencies-composer-${{ hashFiles('composer.json') }}
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.2
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
+          coverage: none
+      - name: Install Composer dependencies
+        run: composer install --prefer-dist --no-interaction --no-suggest
+      - name: Install NPM dependencies
+        run: npm install
+      - name: Compile assets
+        run: npm run production
+      - name: Execute tests
+        run: vendor/bin/phpunit --verbose
+      - name: Deploy
+        if: github.ref == 'refs/heads/master'
+        run: curl ${{ secrets.ENVOYER_HOOK }}?sha=${{ github.sha }}
